# ec-poly-eval

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
depends/: CMakeLists.txt
src/: CMakeLists.txt  main.c
